agregar script para setup de base de datos

--- a/.project
+++ b/.project
@@ -3,6 +3,8 @@
 	<name>eventos-parent</name>
 	<comment></comment>
 	<projects>
+		<project>admin</project>
+		<project>core</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
