--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -1,4 +1,7 @@
-<!--<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">-->
+<!--<project xmlns="http://maven.apache.org/POM/4.0.0"
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+https://maven.apache.org/xsd/maven-4.0.0.xsd">-->
 <!--  <modelVersion>4.0.0</modelVersion>-->
 <!--  <parent>-->
 <!--    <groupId>uy.edu.tpgr63</groupId>-->
@@ -9,8 +12,8 @@
 <!--</project>-->
 
 <project xmlns="https://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xmlns:xsi="https://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>uy.edu.tpgr63</groupId>
@@ -23,9 +26,9 @@
   <dependencies>
     <!-- dependencia al core -->
     <dependency>
-    	<groupId>uy.edu.tpgr63</groupId>
-    	<artifactId>core</artifactId>
-    	<version>0.1.0</version>
+      <groupId>uy.edu.tpgr63</groupId>
+      <artifactId>core</artifactId>
+      <version>0.1.0</version>
     </dependency>
 
     <!-- Swing helpers (alineado a lo que ya usás) -->
@@ -49,13 +52,32 @@
       <artifactId>jgoodies-common</artifactId>
       <version>1.8.1</version>
     </dependency>
+    <!-- API Swing -->
+    <dependency>
+      <groupId>com.github.jiconfont</groupId>
+      <artifactId>jiconfont-swing</artifactId>
+      <version>1.0.1</version>
+    </dependency>
+    <!-- Pack de íconos (elegí uno; ej. Font Awesome 4.7) -->
+    <dependency>
+      <groupId>com.github.jiconfont</groupId>
+      <artifactId>jiconfont-font_awesome</artifactId>
+      <version>4.7.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.github.jiconfont</groupId>
+      <artifactId>jiconfont-google_material_design_icons</artifactId>
+      <version>2.1.3.0</version>
+    </dependency>
   </dependencies>
 
   <build>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
-        <includes><include>**/*</include></includes>
+        <includes>
+          <include>**/*</include>
+        </includes>
       </resource>
     </resources>
     <plugins>
@@ -67,11 +89,14 @@
         <executions>
           <execution>
             <phase>package</phase>
-            <goals><goal>shade</goal></goals>
+            <goals>
+              <goal>shade</goal>
+            </goals>
             <configuration>
               <createDependencyReducedPom>false</createDependencyReducedPom>
               <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>gui.Principal</mainClass>
                 </transformer>
               </transformers>
