Ajustes Interfaz Alta Evento y excepciones. Inyeccion de controlador AltaEvento

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 codebase.md
+
+core/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+
+core/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+
+admin/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
