--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -69,6 +69,11 @@ https://maven.apache.org/xsd/maven-4.0.0.xsd">-->
       <artifactId>jiconfont-google_material_design_icons</artifactId>
       <version>2.1.3.0</version>
     </dependency>
+    <dependency>
+    <groupId>com.github.lgooddatepicker</groupId>
+    <artifactId>LGoodDatePicker</artifactId>
+    <version>11.2.1</version>
+</dependency>
   </dependencies>
 
   <build>
