--- a/core/pom.xml
+++ b/core/pom.xml
@@ -60,7 +60,16 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    
   </dependencies>
+  
 
   <build>
     <plugins>
