--- a/core/pom.xml
+++ b/core/pom.xml
@@ -61,6 +61,13 @@
       <scope>test</scope>
     </dependency>
     
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    
   </dependencies>
   
 
