Consulta Usuario listo, fixes a carga de datos y UI principal
TO DO: fixear alta patrocinio, pruebas unitarias

--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -78,6 +78,12 @@ https://maven.apache.org/xsd/maven-4.0.0.xsd">-->
 
   <build>
     <resources>
+    <resource>
+        <directory>assets/tests</directory>
+        <includes>
+          <include>**/*</include>
+        </includes>
+      </resource>
       <resource>
         <directory>src/main/resources</directory>
         <includes>
